[project]
name = "libnum"
version = "1.7.2"
description = "Working with numbers (primes, modular, etc.)"
authors = [{ "name" = "hellman" }]
license = "MIT"
readme = "README.md"
keywords = ["numbers", "modular", "cryptography", "number theory"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Security :: Cryptography',
]
dependencies = []
requires-python = ">= 3.6"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.5"]
